[gd_scene load_steps=15 format=2]

[ext_resource path="res://Actor/Player.gd" type="Script" id=1]
[ext_resource path="res://Asset/Actor/Josh/DB Shotgun  Arm.png" type="Texture" id=2]
[ext_resource path="res://Audio/SFX/Pistol_Sound_Effect(256k).mp3" type="AudioStream" id=3]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://Actor/Player.tres" type="SpriteFrames" id=5]
[ext_resource path="res://Audio/SFX/walking_sound_effect(256k).mp3" type="AudioStream" id=6]
[ext_resource path="res://Audio/SFX/pick_up_gun_Sound_effect(256k).mp3" type="AudioStream" id=7]
[ext_resource path="res://Asset/Actor/S Handgun  Arm.png" type="Texture" id=8]
[ext_resource path="res://Asset/Font/PressStart2P-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Audio/SFX/Shitgun.mp3" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.27806, 23.84 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2.71589, 32.1387 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=4]
resource_name = "walk"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 132, 194 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )
Bullet = ExtResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = ExtResource( 5 )
animation = "Idle"
frame = 1

[node name="Shotgun" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( 0.333336, 5 )
texture = ExtResource( 2 )
offset = Vector2( 7, 0 )

[node name="GunNode" type="Sprite" parent="Sprite"]
position = Vector2( -1, 5.66667 )
scale = Vector2( 0.907552, 0.760417 )
texture = ExtResource( 8 )
offset = Vector2( 7, 0 )

[node name="EndOfGun" type="Position2D" parent="Sprite/GunNode"]
position = Vector2( 16.4103, -1.03226 )

[node name="GunDirection" type="Position2D" parent="Sprite/GunNode"]
position = Vector2( 23.7949, -1.03226 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12 )
rotation = -3.14159
scale = Vector2( 18.7784, 1.65688 )
shape = SubResource( 1 )

[node name="PlayerArea" type="Area2D" parent="."]
rotation = -3.14159
scale = Vector2( 18.7784, 1.65688 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2( -0.0532537, -4.97916 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 3, 13 )
current = true
smoothing_enabled = true
smoothing_speed = 8.0

[node name="Shot_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
pitch_scale = 3.0
bus = "SFX"

[node name="Walk_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0
bus = "SFX"

[node name="Shit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = 2.0
bus = "SFX"

[node name="Rlot_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[node name="PShots" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.0
margin_top = -52.0
margin_right = 12.0
margin_bottom = -27.0
custom_fonts/font = SubResource( 2 )
text = "5"
align = 1

[node name="WTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootCD" type="Timer" parent="."]

[node name="DashCD" type="Timer" parent="."]
one_shot = true

[node name="IframeCD" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/walk = SubResource( 4 )

[connection signal="area_entered" from="PlayerArea" to="." method="_on_PlayerArea_area_entered"]
[connection signal="area_exited" from="PlayerArea" to="." method="_on_PlayerArea_area_exited"]
[connection signal="timeout" from="ShootCD" to="." method="_on_ShootCD_timeout"]
[connection signal="timeout" from="DashCD" to="." method="_on_DashCD_timeout"]
[connection signal="timeout" from="IframeCD" to="." method="_on_IframeCD_timeout"]
